--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <h1>Rain Arendi</h1>
     <img src="mina.jpeg">
     <h2>Summary</h2>
-         <p>I am a fast leaner and dedicated to whatever I do.<br>
+         <p>I am a fast learner and dedicated to whatever I do.<br>
         I have experience in manufacturing, sales, purchase, <br>
         and driving heavy machinery</p>
 <hr>
@@ -34,7 +34,7 @@
                 </ul>
             </li>
             <br>
-            <li>July 2011 - April 2016
+            <li>July 2011 - April 2016 - production manager
                 <ul><li>Organising work in factory</li>
                     <li>Warehouse Management</li>
                     <li>Purchase of Raw Material</li>
